--- a/ElementsAttributes.html
+++ b/ElementsAttributes.html
@@ -12,7 +12,7 @@
         <!-- h1 - h6  -->
         <h1>Book Store</h1>
         <p>This Is My Book Store, Welcome</p>
-        <img src="" alt="">
+        <img decoding="async" src="" alt="">
         <p></p>
         <a href=""></a>
         <audio src=""></audio>
