--- a/Div.html
+++ b/Div.html
@@ -6,7 +6,68 @@
     <meta name="description" content="This Is Our Book Store" />
   </head>
   <body>
-    <h1>Book Store</h1>
-    <p>This Is Book Store, Welcome</p>
+    <div>
+      <h1>Book Store</h1>
+      <p>This Is Book Store, Welcome</p>
+    </div>
+
+    <div class="romantic">
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="police">
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="fantasy">
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+      <div class="book">
+        <h3>Book Title</h3>
+        <p>Book description</p>
+        <span>$100</span>
+      </div>
+    </div>
+
 </body>
 </html>
