add readOnly... in form

--- a/forms/ActionNameMethod.html
+++ b/forms/ActionNameMethod.html
@@ -27,7 +27,7 @@
         </div>
         <br>
         <div>
-            <label>Password</label>
+            <label>Email</label>
             <input type="email" required placeholder="Write A Valid Email" value="achraf@gmail.com" name="mail">
         </div>
         <input type="submit" value="Save">
