--- a/forms/ReadOnlyDisabledAutofocus.html
+++ b/forms/ReadOnlyDisabledAutofocus.html
@@ -14,22 +14,34 @@
         <input type="hidden" value="achraf">
         <div>
             <label>Username</label>
-            <input type="text" required placeholder="Username" name="user">
+            <input type="text"
+            required placeholder="Username"
+            name="user"
+            value="Achraf"
+            readonly>
         </div>
         <br>
         <div>
             <label>Subject</label>
-            <input type="text" name="subject">
+            <input type="text" name="subject" autofocus>
         </div>
         <br>
         <div>
             <label>Password</label>
-            <input type="password" required placeholder="Write A Complex Password" name="pass">
+            <input type="password"
+            required placeholder="Write A Complex Password"
+            name="pass"
+            minlength="10"
+            maxlength="20">
         </div>
         <br>
         <div>
             <label>Email</label>
-            <input type="email" required placeholder="Write A Valid Email" value="achraf@gmail.com" name="mail">
+            <input type="email"
+            required placeholder="Write A Valid Email"
+            value="achraf@gmail.com"
+            name="mail"
+            disabled>
         </div>
         <br>
         <div>
